# gigaevo-core-mem-paper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_memory.md  README_memory_platform_run.md  greedy.py  greedy2.py  helper.py  pyproject.toml  run.py  run_hydra.py  verify_setup.py
.github/workflows/: build.yml
config/: config.yaml  constants.yaml  memory_backend.yaml
config/algorithm/: _base.yaml  single_island.yaml
config/constants/: endpoints.yaml  evolution.yaml  pipeline.yaml
config/evolution/: default.yaml
config/experiment/: base.yaml  full_featured.yaml  multi_llm_exploration.yaml
config/llm/: heterogeneous.yaml  multi_model.yaml  qwen_235b.yaml  single.yaml
config/loader/: directory.yaml  redis_selection.yaml
config/logging/: default.yaml  tensorboard.yaml  wandb.yaml
config/map_elites/: single_island.yaml
config/pipeline/: auto.yaml  custom.yaml  standard.yaml  with_context.yaml
config/redis/: default.yaml
config/runner/: default.yaml
config/wizard/: heilbron.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DAG_SYSTEM.md  MEMORY_IDEATRACKER_FAST.md  QUICKSTART.md  USAGE.md  memory.md
gigaevo/: __init__.py
gigaevo/config/: helpers.py
gigaevo/database/: program_storage.py  redis_program_storage.py  state_manager.py
gigaevo/entrypoint/: constants.py  default_pipelines.py
gigaevo/evolution/engine/: config.py  core.py  metrics.py
gigaevo/evolution/mutation/: context.py  mutation_operator.py
gigaevo/llm/: models.py
gigaevo/memory/: write_pipeline_config.py
gigaevo/problems/: config.py  context.py  initial_loaders.py  layout.py  wizard_config.py
gigaevo/programs/: core_types.py  program.py  program_state.py
gigaevo/prompts/: __init__.py
gigaevo/runner/: __init__.py  dag_blueprint.py  dag_runner.py  runner.py
gigaevo/utils/: metrics_collector.py  metrics_tracker.py  serve.py  tb_logger.py
my_results/: validity_statistics.txt
my_results/metrics/: metrics_statistics.txt
npy/: gf2^11_1120.npy  gf2^12_126410.npy  gf2^14_148610.npy  gf2^3_320.npy  gf2^5_520.npy  gf2^6_610.npy
problems/dashboard/: seed_redis.py  task_description.txt  validate.py
problems/heilbron/: metrics.yaml  mutation_system_prompt.txt  mutation_user_prompt.txt  task_description.txt  task_hints.txt  validate.py
problems/heilbron_simplified/: exploitation_prompt.txt  metrics.yaml  mutation_exploitation_prompt.txt  mutation_exploration_prompt.txt  mutation_system_prompt.txt  mutation_user_prompt.txt  task_description.txt  task_hints.txt  validate.py
problems/heilbron_wizard/: helper.py  metrics.yaml  task_description.txt  validate.py
problems/hexagon_pack/: helper.py  metrics.yaml  mutation_system_prompt.txt  task_description.txt  validate.py
problems/kissing_number/: metrics.yaml  mutation_system_prompt.txt  mutation_user_prompt.txt  task_description.txt  task_hints.txt  validate.py
problems/kissing_number_11d/: metrics.yaml  task_description.txt
problems/optimization/: metrics.yaml  mutation_system_prompt.txt  validate.py
problems/prompts/: utils.py
problems/quantum_circuits/: context.py  helper.py  metrics.yaml  mutation_system_prompt.txt  mutation_user_prompt.txt  task_description.txt  task_hints.txt  validate.py
problems/toy_example/: mutation_system_prompt.txt  validate.py
src/: exceptions.py
src/config/: __init__.py  helpers.py
src/database/: merge_strategies.py  program_storage.py  redis_program_storage.py  state_manager.py
src/entrypoint/: default_pipelines.py  evolution_context.py
src/llm/: models.py  wrapper.py
src/problems/: context.py  initial_loaders.py  layout.py
src/programs/: automata.py  contract.py  core_types.py  dag.py  program.py  program_state.py  state_manager.py  utils.py
src/prompts/: __init__.py
src/runner/: __init__.py  dag_blueprint.py  dag_runner.py  dag_spec.py  engine_driver.py  evolution_runner.py  factories.py  manager.py  metrics.py  pipeline_factory.py  runner.py  scheduler.py  stage_registry.py
src/utils/: __init__.py  error_handling.py  json.py  logger_setup.py  performance_monitor.py
tests/infra/: bench_load_balancer.py
tools/: README.md  comparison.py  evolution_data_utils.py  evolution_fitness_analyzer.py  evolution_runs_comparison.py  exec_runner.py  extract_top_programs.py  format.sh  lint.sh  redis2pd.py  run_eval.sh  utils.py  wizard.py
tools/dag_builder/: README.md  api.py  requirements.txt  run.py  start.sh
tools/wizard/: __main__.py
(+277 files in other folders)
