[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaevolve"
version = "0.1.0"
description = "Advanced evolutionary computation framework with MAP-Elites and DAG-based program execution"
authors = [
    {name = "MetaEvolve Team", email = "team@metaevolve.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["evolution", "genetic-algorithms", "map-elites", "optimization", "machine-learning"]

dependencies = [
    "redis>=4.5.0",
    "loguru>=0.7.0",
    "numpy==1.26.4",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "fakeredis[lua]>=2.19.0",
    "orjson",
    "diffpatch",
    "openai>=1.0.0",
    "pandas",
    "matplotlib",
    "seaborn",
    "python-dotenv"
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "types-psutil>=5.9.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
examples = [
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "pandas>=1.4.0",
]
config = [
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]
hydra = ["hydra-core>=1.3.0"]

[project.urls]
Homepage = "https://github.com/metaevolve/metaevolve"
Documentation = "https://metaevolve.readthedocs.io"
Repository = "https://github.com/metaevolve/metaevolve"
Issues = "https://github.com/metaevolve/metaevolve/issues"
Changelog = "https://github.com/metaevolve/metaevolve/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
"metaevolve" = "src"

[tool.black]
line-length = 80
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80
known_first_party = ["metaevolve"]
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
remove_redundant_aliases = true
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
disallow_any_generics = true
exclude = ["build/", "dist/", "examples/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "loguru.*",
    "numpy.*",
    "matplotlib.*",
    "pandas.*",
    "hydra.*",
    "omegaconf.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
] 